[package]
name = "telegram-login"
version = "0.2.0"
authors = ["Julian Fell <julesfell@gmail.com>"]
description = "A rust implementation of the verification of Telegram Login requests"
license = "MIT"
repository = "https://github.com/jtfell/telegram-login-rs"

[dependencies]
ring = "0.13.1"
hex = "0.3.2"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
